--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon app.ts",
-    "serve": "ts-node app.ts"
+    "serve": "node dist/app.js",
+    "build": "tsc -p . "
   },
   "dependencies": {
     "express": "^4.18.2",
