--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^4.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
