--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,12 @@
     "build": "tsc -p . "
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.4"
   }
 }
